Refactor chart caching and replace VulnerabilityCheckerImpl.